FIX screenshot visible over fixed header

--- a/apps/website/src/components/Layout/Header.module.scss
+++ b/apps/website/src/components/Layout/Header.module.scss
@@ -7,6 +7,8 @@
     left: 0;
     width: 100%;
 
+    z-index: 99;
+
     .content {
         display: flex;
         justify-content: space-between;
